# $Id: Makefile.am,v 1.11 2005/10/06 05:24:54 dhanks Exp $
#
# eas - Enterprise Audit Shell
#
# Copyright 2004 and $Date: 2005/10/06 05:24:54 $
#                 Douglas Richard Hanks Jr.
#
# Licensed under the Open Software License version 2.0
#
# This program is free software; you can redistribute it
# and/or modify it under the terms of the Open Software
# License, version 2.0 by Lauwrence E. Rosen.
#
# This program is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied
# warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.  See the Open Software License for details.

SUBDIRS=sqlite src
EXTRA_DIST=certs user.sql eas-mkcerts.tar EAS_Admin_Guide.pdf
