noinst_LIBRARIES=libsqlite.a
libsqlite_a_SOURCES=alter.c analyze.c attach.c auth.c btree.c btree.h build.c callback.c complete.c date.c delete.c expr.c func.c hash.c hash.h insert.c keywordhash.h legacy.c main.c opcodes.c opcodes.h os.c os_common.h os.h os_unix.c os_win.c pager.c pager.h parse.c parse.h pragma.c prepare.c printf.c random.c select.c sqlite3.h sqliteInt.h table.c tokenize.c trigger.c update.c utf.c util.c vacuum.c vdbeapi.c vdbeaux.c vdbe.c vdbefifo.c vdbe.h vdbeInt.h vdbemem.c where.c
CFLAGS=-O2
CPPFLAGS=
